# TRICAL

./: .ccsproject  .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md  setup.py
include/: TRICAL.h
python/TRICAL/: __init__.py  __main__.py  viz.html
src/: 3dmath.h  TRICAL.c  filter.c  filter.h
test/: test_3dmath.cpp  test_TRICAL.cpp  test_filter.cpp
